workspaces/tilings/src-rust/tiling/src/snapshots/tessellation_tiling__path__tests__empty_path_with_type_ahead.snap
---
source: workspaces/tiling/src/./path_tests.rs
expression: "Path::default().with_type_ahead(true).from_string(\"\")"
---
Ok(
    Path {
        option_type_ahead: true,
        nodes: [],
        index: 0,
    },
)
