workspaces/tilings/src-rust/tiling/src/snapshots/tessellation_tiling__path__tests__empty_shape_group.snap
---
source: workspaces/tiling/src/./path_tests.rs
expression: "Path::default().from_string(\"3-4,\")"
---
Err(
    InvalidShapeInGroup {
        shape: "",
        group: "4,",
        reason: "Invalid shape \"\" -> invalid",
    },
)
