workspaces/tilings/src-rust/tiling/src/snapshots/tessellation_tiling__path__tests__invalid_seed_shape_group.snap
---
source: workspaces/tiling/src/./path_tests.rs
expression: "Path::default().from_string(\"2\")"
---
Err(
    InvalidShapeGroup {
        group: "2",
        reason: "the first group must consist of a single valid shape",
    },
)
