workspaces/tilings/src-rust/tiling/src/snapshots/tessellation_tiling__path__tests__invalid_shape_group.snap
---
source: workspaces/tiling/src/./path_tests.rs
expression: "Path::default().from_string(\"3-2\")"
---
Err(
    InvalidShapeInGroup {
        shape: "2",
        group: "2",
        reason: "Invalid shape \"2\" -> invalid",
    },
)
